# supmax

./: Makefile.am  Makefile.in  README.es.md  README.md  aclocal.m4  authors  config.h.in  configure  configure.in  tags
include/: alphabet.h  clo.h  debug.h  dotty.h  dotty2.h  fasta.h  nodedata.h  nodedata_dotty.h  ntree.h  ntree_show.h  raw.h  seq.h  seq_show.h  seqformat.h  statics.h  supmax.h  supmax_show.cc  supmax_show.h  types.h
src/: Makefile.am  Makefile.in  alphabet.cc  clo.cc  debug.cc  main.cc  seq.cc
templates/: Makefile.in  options.xml  result.gnuplot.template  result.tex.template
tools/: Makefile.am  Makefile.in  Makefile.old  check.pl  fasta2tex.pl  generate_fragments.cc  generate_genome.cc  in2tex.pl  randomread.pl  supmax2fasta.pl  supmax2tex.pl
