dnl Process this file with autoconf to produce a configure script.
AC_INIT(config.h.in)
AM_INIT_AUTOMAKE(supmax, 1.5)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
AM_ACLOCAL_INCLUDE(macros)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strtol)

AC_OUTPUT(templates/Makefile Makefile src/Makefile tools/Makefile )
